@@ -7,7 +7,6 @@ import com.example.lab.exceptions.NotFoundException;
 import com.example.lab.service.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -48,7 +47,7 @@ public class UserController {
                     return new UserDto(user, false);
                 }
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @GetMapping("/{username}")
